use snmp trnaslate